--- a/TopGunSyllabus.iPhone/Info.plist
+++ b/TopGunSyllabus.iPhone/Info.plist
@@ -37,5 +37,7 @@
 		<string>Icon@2x.png</string>
 		<string>Icon.png</string>
 	</array>
+	<key>XSLaunchImageAssets</key>
+	<string>Resources/Images.xcassets/LaunchImage.launchimage</string>
 </dict>
 </plist>
