--- a/TopGunSyllabus.iPhone/TopGunSyllabus.iPhone.csproj
+++ b/TopGunSyllabus.iPhone/TopGunSyllabus.iPhone.csproj
@@ -22,8 +22,6 @@
     <MtouchArch>i386</MtouchArch>
     <MtouchLink>None</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
-    <Commandlineparameters />
-    <Externalconsole>False</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
@@ -46,8 +44,9 @@
     <ConsolePause>false</ConsolePause>
     <MtouchArch>ARMv7, ARM64</MtouchArch>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <CodesignKey>iPhone Developer</CodesignKey>
+    <CodesignKey>iPhone Developer: maciej konkolowicz (D8Z5F88M85)</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
+    <CodesignProvision>fbf2f61d-1593-436f-8fbf-10f693c28a60</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -70,8 +69,8 @@
     <MtouchArch>ARMv7, ARM64</MtouchArch>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <BuildIpa>True</BuildIpa>
-    <CodesignProvision>Automatic:AdHoc</CodesignProvision>
-    <CodesignKey>iPhone Distribution</CodesignKey>
+    <CodesignProvision>fbf2f61d-1593-436f-8fbf-10f693c28a60</CodesignProvision>
+    <CodesignKey>iPhone Developer: maciej konkolowicz (D8Z5F88M85)</CodesignKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|iPhone' ">
     <DebugType>none</DebugType>
@@ -120,10 +119,11 @@
     </BundleResource>
     <BundleResource Include="Resources\Icon.png" />
     <BundleResource Include="Resources\Icon%402x.png" />
+    <BundleResource Include="Images\TopGunIPhone6Plus.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TopGunSyllabus.Core\TopGunSyllabus.Core.csproj">
-      <Project>{ff50e741-11db-4faf-8094-05e3515a995d}</Project>
+      <Project>{FF50E741-11DB-4FAF-8094-05E3515A995D}</Project>
       <Name>TopGunSyllabus.Core</Name>
     </ProjectReference>
   </ItemGroup>
@@ -131,4 +131,7 @@
     <Folder Include="Images\Icons\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
+  <ItemGroup>
+    <ImageAsset Include="Resources\Images.xcassets\LaunchImage.launchimage\Contents.json" />
+  </ItemGroup>
 </Project>
