Updated project to support all architectures and increased java heap size to 1g

--- a/TopGunSyllabus/TopGunSyllabus.csproj
+++ b/TopGunSyllabus/TopGunSyllabus.csproj
@@ -44,6 +44,11 @@
     <BundleAssemblies>False</BundleAssemblies>
     <Debugger>Xamarin</Debugger>
     <DebugSymbols>False</DebugSymbols>
+    <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
+    <AndroidSupportedAbis>armeabi-v7a;x86;arm64-v8a;x86_64;armeabi</AndroidSupportedAbis>
+  </PropertyGroup>
+  <PropertyGroup>
+    <JavaMaximumHeapSize>1G</JavaMaximumHeapSize>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="HockeySDK, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
