Enabled ProGuard to reduce .apk size

--- a/TopGunSyllabus/TopGunSyllabus.csproj
+++ b/TopGunSyllabus/TopGunSyllabus.csproj
@@ -54,7 +54,7 @@
     <AotAssemblies>False</AotAssemblies>
     <EnableLLVM>False</EnableLLVM>
     <AndroidEnableMultiDex>False</AndroidEnableMultiDex>
-    <EnableProguard>False</EnableProguard>
+    <EnableProguard>True</EnableProguard>
     <DebugSymbols>False</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
