Changed platform target to x64 for iOS project.

--- a/TopGunSyllabus.iPhone/TopGunSyllabus.iPhone.csproj
+++ b/TopGunSyllabus.iPhone/TopGunSyllabus.iPhone.csproj
@@ -22,6 +22,7 @@
     <MtouchArch>i386</MtouchArch>
     <MtouchLink>Full</MtouchLink>
     <MtouchDebug>true</MtouchDebug>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>none</DebugType>
