--- a/TopGunSyllabus.iPhone/TopGunSyllabusiOS.csproj
+++ b/TopGunSyllabus.iPhone/TopGunSyllabusiOS.csproj
@@ -1,196 +1,198 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-    <ProjectGuid>{B59CF9BD-2F81-4EC9-94E0-88DF22776E00}</ProjectGuid>
-    <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>TopGunSyllabus.iPhone</RootNamespace>
-    <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <AssemblyName>TopGunSyllabusiPhone</AssemblyName>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\iPhoneSimulator\Debug</OutputPath>
-    <DefineConstants>DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>False</ConsolePause>
-    <MtouchArch>i386</MtouchArch>
-    <MtouchLink>Full</MtouchLink>
-    <MtouchDebug>true</MtouchDebug>
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
-    <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\iPhoneSimulator\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <MtouchLink>Full</MtouchLink>
-    <MtouchArch>i386</MtouchArch>
-    <ConsolePause>false</ConsolePause>
-    <BuildIpa>True</BuildIpa>
-    <IpaIncludeArtwork>False</IpaIncludeArtwork>
-    <MtouchSdkVersion>10.1</MtouchSdkVersion>
-    <MtouchDebug>True</MtouchDebug>
-    <MtouchProfiling>False</MtouchProfiling>
-    <MtouchFastDev>False</MtouchFastDev>
-    <MtouchUseLlvm>False</MtouchUseLlvm>
-    <MtouchUseThumb>False</MtouchUseThumb>
-    <MtouchEnableBitcode>False</MtouchEnableBitcode>
-    <MtouchUseSGen>False</MtouchUseSGen>
-    <MtouchUseRefCounting>False</MtouchUseRefCounting>
-    <OptimizePNGs>True</OptimizePNGs>
-    <MtouchTlsProvider>Default</MtouchTlsProvider>
-    <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
-    <MtouchFloat32>False</MtouchFloat32>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\iPhone\Debug</OutputPath>
-    <DefineConstants>DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-    <MtouchArch>ARMv7, ARM64</MtouchArch>
-    <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <CodesignKey>iPhone Developer: maciej konkolowicz (D8Z5F88M85)</CodesignKey>
-    <MtouchDebug>true</MtouchDebug>
-    <CodesignProvision>fbf2f61d-1593-436f-8fbf-10f693c28a60</CodesignProvision>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
-    <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\iPhone\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <MtouchArch>ARMv7, ARM64</MtouchArch>
-    <ConsolePause>false</ConsolePause>
-    <CodesignKey>iPhone Developer</CodesignKey>
-    <MtouchSdkVersion>10.1</MtouchSdkVersion>
-    <MtouchLink>SdkOnly</MtouchLink>
-    <MtouchDebug>False</MtouchDebug>
-    <MtouchProfiling>False</MtouchProfiling>
-    <MtouchFastDev>False</MtouchFastDev>
-    <MtouchUseLlvm>False</MtouchUseLlvm>
-    <MtouchUseThumb>False</MtouchUseThumb>
-    <MtouchUseSGen>False</MtouchUseSGen>
-    <MtouchUseRefCounting>False</MtouchUseRefCounting>
-    <OptimizePNGs>True</OptimizePNGs>
-    <MtouchFloat32>False</MtouchFloat32>
-    <MtouchI18n />
-    <BuildIpa>True</BuildIpa>
-    <IpaIncludeArtwork>False</IpaIncludeArtwork>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
-    <DebugType>none</DebugType>
-    <Optimize>True</Optimize>
-    <OutputPath>bin\iPhone\Ad-Hoc</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>False</ConsolePause>
-    <MtouchArch>ARMv7, ARM64</MtouchArch>
-    <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <BuildIpa>True</BuildIpa>
-    <CodesignProvision>fbf2f61d-1593-436f-8fbf-10f693c28a60</CodesignProvision>
-    <CodesignKey>iPhone Developer: maciej konkolowicz (D8Z5F88M85)</CodesignKey>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|iPhone' ">
-    <DebugType>none</DebugType>
-    <Optimize>True</Optimize>
-    <OutputPath>bin\iPhone\AppStore</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>False</ConsolePause>
-    <MtouchArch>ARMv7, ARM64</MtouchArch>
-    <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <CodesignProvision>Automatic:AppStore</CodesignProvision>
-    <CodesignKey>iPhone Distribution</CodesignKey>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'iOS Release|iPhoneSimulator'">
-    <OutputPath>bin\iPhoneSimulator\iOS Release\</OutputPath>
-    <DefineConstants>__UNIFIED__;__MOBILE__;__IOS__;</DefineConstants>
-    <Optimize>true</Optimize>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'iOS Release|iPhone'">
-    <OutputPath>bin\iPhone\iOS Release\</OutputPath>
-    <DefineConstants>__UNIFIED__;__MOBILE__;__IOS__;</DefineConstants>
-    <Optimize>true</Optimize>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="DataSources\PhaseDataSource.cs" />
-    <Compile Include="Main.cs" />
-    <Compile Include="AppDelegate.cs" />
-    <None Include="GettingStarted.Xamarin" />
-    <None Include="Info.plist" />
-    <Compile Include="PhaseTableViewController.cs" />
-    <Compile Include="PhaseTableViewController.designer.cs">
-      <DependentUpon>PhaseTableViewController.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <ITunesArtwork Include="iTunesArtwork" />
-    <ITunesArtwork Include="iTunesArtwork%402x" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="PhaseDetailViewController.designer.cs">
-      <DependentUpon>PhaseDetailViewController.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PhaseDetailViewController.cs" />
-    <InterfaceDefinition Include="Main.storyboard" />
-    <InterfaceDefinition Include="Resources\LaunchScreen.xib" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Core" />
-    <Reference Include="Xamarin.iOS" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Entitlements.plist" />
-    <BundleResource Include="Images\topgun_teamfortress.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </BundleResource>
-    <BundleResource Include="Resources\Icon.png" />
-    <BundleResource Include="Resources\Icon%402x.png" />
-    <BundleResource Include="Images\TopGunIPhone6Plus.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TopGunSyllabus.Core\TopGunSyllabus.Core.csproj">
-      <Project>{FF50E741-11DB-4FAF-8094-05E3515A995D}</Project>
-      <Name>TopGunSyllabus.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Images\Icons\" />
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
-  <ItemGroup>
-    <ImageAsset Include="Resources\Images.xcassets\LaunchImage.launchimage\Contents.json">
-      <InProject>false</InProject>
-    </ImageAsset>
-  </ItemGroup>
-  <PropertyGroup>
-    <CreateIpaDependsOn>
-		  $(CreateIpaDependsOn);
-		  CopyIpa
-	  </CreateIpaDependsOn>
-  </PropertyGroup>
-  <Target Name="CopyIpa" Condition="'$(OutputType)' == 'Exe'&#xD;&#xA;&#x9;&#x9;  And '$(ComputedPlatform)' == 'iPhone'&#xD;&#xA;&#x9;&#x9;  And '$(BuildIpa)' == 'true'">
-    <Copy SourceFiles="$(OutputPath)$(IpaPackageName)" DestinationFolder="/Users/mkonkolowicz/Desktop/" />
-  </Target>
+	<PropertyGroup>
+		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+		<Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
+		<ProjectGuid>{B59CF9BD-2F81-4EC9-94E0-88DF22776E00}</ProjectGuid>
+		<ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+		<OutputType>Exe</OutputType>
+		<RootNamespace>TopGunSyllabus.iPhone</RootNamespace>
+		<IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
+		<AssemblyName>TopGunSyllabusiPhone</AssemblyName>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
+		<DebugSymbols>true</DebugSymbols>
+		<DebugType>full</DebugType>
+		<Optimize>false</Optimize>
+		<OutputPath>bin\iPhoneSimulator\Debug</OutputPath>
+		<DefineConstants>DEBUG</DefineConstants>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<ConsolePause>False</ConsolePause>
+		<MtouchArch>i386</MtouchArch>
+		<MtouchLink>Full</MtouchLink>
+		<MtouchDebug>true</MtouchDebug>
+		<PlatformTarget>x64</PlatformTarget>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
+		<DebugType>none</DebugType>
+		<Optimize>true</Optimize>
+		<OutputPath>bin\iPhoneSimulator\Release</OutputPath>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<MtouchLink>Full</MtouchLink>
+		<MtouchArch>i386</MtouchArch>
+		<ConsolePause>false</ConsolePause>
+		<BuildIpa>True</BuildIpa>
+		<IpaIncludeArtwork>False</IpaIncludeArtwork>
+		<MtouchSdkVersion>10.1</MtouchSdkVersion>
+		<MtouchDebug>True</MtouchDebug>
+		<MtouchProfiling>False</MtouchProfiling>
+		<MtouchFastDev>False</MtouchFastDev>
+		<MtouchUseLlvm>False</MtouchUseLlvm>
+		<MtouchUseThumb>False</MtouchUseThumb>
+		<MtouchEnableBitcode>False</MtouchEnableBitcode>
+		<MtouchUseSGen>False</MtouchUseSGen>
+		<MtouchUseRefCounting>False</MtouchUseRefCounting>
+		<OptimizePNGs>True</OptimizePNGs>
+		<MtouchTlsProvider>Default</MtouchTlsProvider>
+		<MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
+		<MtouchFloat32>False</MtouchFloat32>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
+		<DebugSymbols>true</DebugSymbols>
+		<DebugType>full</DebugType>
+		<Optimize>false</Optimize>
+		<OutputPath>bin\iPhone\Debug</OutputPath>
+		<DefineConstants>DEBUG</DefineConstants>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<ConsolePause>false</ConsolePause>
+		<MtouchArch>ARMv7, ARM64</MtouchArch>
+		<CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+		<CodesignKey>iPhone Developer: maciej konkolowicz (D8Z5F88M85)</CodesignKey>
+		<MtouchDebug>true</MtouchDebug>
+		<CodesignProvision>fbf2f61d-1593-436f-8fbf-10f693c28a60</CodesignProvision>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
+		<DebugType>none</DebugType>
+		<Optimize>true</Optimize>
+		<OutputPath>bin\iPhone\Release</OutputPath>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+		<MtouchArch>ARMv7, ARM64</MtouchArch>
+		<ConsolePause>false</ConsolePause>
+		<CodesignKey>iPhone Developer</CodesignKey>
+		<MtouchSdkVersion>10.1</MtouchSdkVersion>
+		<MtouchLink>SdkOnly</MtouchLink>
+		<MtouchDebug>False</MtouchDebug>
+		<MtouchProfiling>False</MtouchProfiling>
+		<MtouchFastDev>False</MtouchFastDev>
+		<MtouchUseLlvm>False</MtouchUseLlvm>
+		<MtouchUseThumb>False</MtouchUseThumb>
+		<MtouchUseSGen>False</MtouchUseSGen>
+		<MtouchUseRefCounting>False</MtouchUseRefCounting>
+		<OptimizePNGs>True</OptimizePNGs>
+		<MtouchFloat32>False</MtouchFloat32>
+		<MtouchI18n />
+		<BuildIpa>True</BuildIpa>
+		<IpaIncludeArtwork>True</IpaIncludeArtwork>
+		<IpaPackageDir>$(OutputPath)</IpaPackageDir>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
+		<DebugType>none</DebugType>
+		<Optimize>True</Optimize>
+		<OutputPath>bin\iPhone\Ad-Hoc</OutputPath>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<ConsolePause>False</ConsolePause>
+		<MtouchArch>ARMv7, ARM64</MtouchArch>
+		<CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+		<BuildIpa>True</BuildIpa>
+		<IpaPackageDir>$(OutputPath)</IpaPackageDir>
+		<CodesignProvision>fbf2f61d-1593-436f-8fbf-10f693c28a60</CodesignProvision>
+		<CodesignKey>iPhone Developer: maciej konkolowicz (D8Z5F88M85)</CodesignKey>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|iPhone' ">
+		<DebugType>none</DebugType>
+		<Optimize>True</Optimize>
+		<OutputPath>bin\iPhone\AppStore</OutputPath>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<ConsolePause>False</ConsolePause>
+		<MtouchArch>ARMv7, ARM64</MtouchArch>
+		<CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+		<CodesignProvision>Automatic:AppStore</CodesignProvision>
+		<CodesignKey>iPhone Distribution</CodesignKey>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'iOS Release|iPhoneSimulator'">
+		<OutputPath>bin\iPhoneSimulator\iOS Release\</OutputPath>
+		<DefineConstants>__UNIFIED__;__MOBILE__;__IOS__;</DefineConstants>
+		<Optimize>true</Optimize>
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<UseVSHostingProcess>false</UseVSHostingProcess>
+		<ErrorReport>prompt</ErrorReport>
+		<CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'iOS Release|iPhone'">
+		<OutputPath>bin\iPhone\iOS Release\</OutputPath>
+		<DefineConstants>__UNIFIED__;__MOBILE__;__IOS__;</DefineConstants>
+		<Optimize>true</Optimize>
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<UseVSHostingProcess>false</UseVSHostingProcess>
+		<ErrorReport>prompt</ErrorReport>
+		<CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+	<ItemGroup>
+		<Compile Include="DataSources\PhaseDataSource.cs" />
+		<Compile Include="Main.cs" />
+		<Compile Include="AppDelegate.cs" />
+		<None Include="GettingStarted.Xamarin" />
+		<None Include="Info.plist" />
+		<Compile Include="PhaseTableViewController.cs" />
+		<Compile Include="PhaseTableViewController.designer.cs">
+			<DependentUpon>PhaseTableViewController.cs</DependentUpon>
+		</Compile>
+		<Compile Include="Properties\AssemblyInfo.cs" />
+		<ITunesArtwork Include="iTunesArtwork" />
+		<ITunesArtwork Include="iTunesArtwork%402x" />
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Include="PhaseDetailViewController.designer.cs">
+			<DependentUpon>PhaseDetailViewController.cs</DependentUpon>
+		</Compile>
+		<Compile Include="PhaseDetailViewController.cs" />
+		<InterfaceDefinition Include="Main.storyboard" />
+		<InterfaceDefinition Include="Resources\LaunchScreen.xib" />
+	</ItemGroup>
+	<ItemGroup>
+		<Reference Include="System" />
+		<Reference Include="System.Xml" />
+		<Reference Include="System.Core" />
+		<Reference Include="Xamarin.iOS" />
+	</ItemGroup>
+	<ItemGroup>
+		<Content Include="Entitlements.plist" />
+		<BundleResource Include="Images\topgun_teamfortress.png">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</BundleResource>
+		<BundleResource Include="Resources\Icon.png" />
+		<BundleResource Include="Resources\Icon%402x.png" />
+		<BundleResource Include="Images\TopGunIPhone6Plus.png" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\TopGunSyllabus.Core\TopGunSyllabus.Core.csproj">
+			<Project>{FF50E741-11DB-4FAF-8094-05E3515A995D}</Project>
+			<Name>TopGunSyllabus.Core</Name>
+		</ProjectReference>
+	</ItemGroup>
+	<ItemGroup>
+		<Folder Include="Images\Icons\" />
+	</ItemGroup>
+	<Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
+	<ItemGroup>
+		<ImageAsset Include="Resources\Images.xcassets\LaunchImage.launchimage\Contents.json">
+			<InProject>false</InProject>
+		</ImageAsset>
+	</ItemGroup>
+	<PropertyGroup>
+		<CreateIpaDependsOn>
+			$(CreateIpaDependsOn);
+			CopyIpa
+		</CreateIpaDependsOn>
+	</PropertyGroup>
+	<Target Name="CopyIpa" Condition="'$(OutputType)' == 'Exe'&#xD;&#xA;&#x9;&#x9;  And '$(ComputedPlatform)' == 'iPhone'&#xD;&#xA;&#x9;&#x9;  And '$(BuildIpa)' == 'true'">
+		<Copy SourceFiles="$(OutputPath)$(IpaPackageName)" DestinationFolder="/Users/mkonkolowicz/Desktop/" />
+	</Target>
 </Project>
