--- a/TopGunSyllabus/packages.config
+++ b/TopGunSyllabus/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="HockeySDK.Xamarin" version="4.1.0" targetFramework="monoandroid70" />
+  <package id="Microsoft.Azure.Mobile" version="0.4.1" targetFramework="monoandroid60" />
+  <package id="Microsoft.Azure.Mobile.Analytics" version="0.4.1" targetFramework="monoandroid60" />
+  <package id="Microsoft.Azure.Mobile.Crashes" version="0.4.1" targetFramework="monoandroid60" />
 </packages>
